--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "loktionov129",
   "license": "ISC",
   "devDependencies": {
     "standard-version": "^4.4.0"
