feat(package.json): add script for running a standard-version

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "release": "standard-version",
+    "standard-version": "standard-version"
   },
   "author": "loktionov129",
   "license": "ISC",
