--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "javascript testing",
-  "main": "index.js",
+  "name": "travisci",
+  "version": "2.3.1",
+  "description": "test travis ci",
   "scripts": {
-    "test": "./node_modules/.bin/mocha test/"
+    "release": "standard-version",
+    "standard-version": "standard-version"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/loktionov129/travisci.git"
+  },
+  "author": "loktionov129",
+  "license": "BSD 2-Clause License",
+  "bugs": {
+    "url": "https://github.com/loktionov129/travisci/issues"
+  },
+  "homepage": "https://github.com/loktionov129/travisci#readme",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "jsdom": "^9.2.1",
-    "mocha": "^2.5.3"
+    "standard-version": "4.4.0"
   }
 }
