--- a/editors/vscode/projectroot/.vscode/settings.json
+++ b/editors/vscode/projectroot/.vscode/settings.json
@@ -14,6 +14,9 @@
   "[javascript]": {
     "editor.formatOnSave": true
   },
+  "[json]": {
+    "editor.formatOnSave": true
+  },
   "[typescript]": {
     "editor.formatOnSave": true
   },
@@ -25,6 +28,9 @@
   },
   "[todo]": {
     "editor.tabSize": 4,
+  },
+  "stylelint.config": {
+    "extends": "./src/.stylelintrc.app.json"
   },
   "todo.file": ".ToDo",
   "todo.indentation": "    ",
