--- a/editors/vscode/projectroot/.vscode/settings.json
+++ b/editors/vscode/projectroot/.vscode/settings.json
@@ -30,7 +30,7 @@
     "editor.tabSize": 4,
   },
   "stylelint.config": {
-    "extends": "./src/.stylelintrc.app.json"
+    "extends": "./src/.stylelintrc/app.json"
   },
   "todo.file": ".ToDo",
   "todo.indentation": "    ",
