--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "release": "standard-version",
     "standard-version": "standard-version",
-    "test": "no way, bro"
+    "test": "echo no way, bro"
   },
   "repository": {
     "type": "git",
