--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
       before_script:
         - echo 5 $FOO
         - echo 6 $FOO
-      scripts:
+      script:
         - echo 7 $FOO
         - echo 8 $FOO
     -
@@ -41,6 +41,6 @@ jobs:
       before_script:
         - echo 55 $FOO
         - echo 66 $FOO
-      scripts:
+      script:
         - echo 77 $FOO
         - echo 88 $FOO
