--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip --junk-paths filename.zip test
+          zip --junk-paths filename.zip test/*
 
       - name: Create Release
         id: create_release
